# karaokehostbot

./: .gitignore  .pyre_configuration  bot.py  dj.py  interface.html  make_service.py  pyproject.toml  queue.html  requirements.txt  test_bot.py  test_db.py  test_queue.py  youtube.py
.github/workflows/: python-app.yml
src/: bot.py  browser.py  dj.py  make_service.py  party.py  stub.py  test_bot.py  test_db.py  test_queue.py  youtube.py
stubs/: isodate.pyi  telegram_markdown_text.pyi
tools/: labels.py
